Refine bootstrap structure

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="retina-ai.html">Diabetic Retinopathy</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Article 2</a>
+                        <a class="nav-link" href="healthcare.html">Healthcare &amp; AI</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Article 3</a>
@@ -81,10 +81,10 @@
                 <article class="col-md-6 col-lg-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h3 class="card-title h5">Coming Soon</h3>
-                            <p class="card-text">Stay tuned for more exciting articles about technology, innovation, and
-                                the world of cats.</p>
-                            <a href="#" class="btn btn-outline-secondary disabled">Read More</a>
+                            <h3 class="card-title h5">Healthcare - Computing for Good</h3>
+                            <p class="card-text">Discover how AI and technology help improve diagosis, access, and
+                                assistive devices.</p>
+                            <a href="healthcare.html" class="btn btn-outline-primary">Read More</a>
                         </div>
                     </div>
                 </article>
