--- a/healthcare.html
+++ b/healthcare.html
@@ -49,7 +49,7 @@
                         <a class="nav-link active" aria-current="page" href="healthcare.html">Healthcare & AI</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Article 3</a>
+                        <a class="nav-link" href="environment.html">Environment</a>
                     </li>
                 </ul>
             </div>
