--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="healthcare.html">Healthcare &amp; AI</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Article 3</a>
+                        <a class="nav-link" href="environment.html">Environment</a>
                     </li>
                 </ul>
             </div>
@@ -92,10 +92,11 @@
                 <article class="col-md-6 col-lg-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h3 class="card-title h5">Coming Soon</h3>
-                            <p class="card-text">More fascinating content is on its way. Check back soon for updates!
+                            <h3 class="card-title h5">Environment</h3>
+                            <p class="card-text">Discover how AI and technology help improve environmental monitoring, conservation,
+                                and sustainable practices.
                             </p>
-                            <a href="#" class="btn btn-outline-secondary disabled">Read More</a>
+                            <a href="environment.html" class="btn btn-outline-primary">Read More</a>
                         </div>
                     </div>
                 </article>
