--- a/retina-ai.html
+++ b/retina-ai.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="healthcare.html">Healthcare &amp; AI</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Article 3</a>
+                        <a class="nav-link" href="environment.html">Environment</a>
                     </li>
                 </ul>
             </div>
