--- a/environment.html
+++ b/environment.html
@@ -1,14 +1,14 @@
-<!-- ...existing code... -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Healthcare</title>
-
-    <!-- Bootstrap CSS (CDN) -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Environment &mdash; Computing for Sustainability | Cats</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="retina-ai.html">Diabetic Retinopathy</a>
@@ -32,98 +32,129 @@
                         <a class="nav-link" href="healthcare.html">Healthcare &amp; AI</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="environment.html">Environment</a>
+                        <a class="nav-link active" aria-current="page" href="environment.html">Environment</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <!-- Main content -->
-    <main class="container my-5">
-        <header class="text-center mb-4">
-            <h1 class="display-5 fw-bold">Environmental Protection and Sustainability</h1>
-            <p class="text-muted">How AI and technology help improve environmental monitoring, conservation, and
-                sustainable practices.</p>
+
+    <main>
+        <header>
+            <div class="container">
+                <h1 class="display-5 fw-bold mb-4">Environmental Protection and Sustainability</h1>
+                <p class="lead">AI is helping to improve environmental monitoring, conservation, and sustainable
+                    practices.</p>
+                <!-- Author Section -->
+                <div class="container mb-4" id="authorSection">
+                    <div class="row">
+                        <div class="col">
+                            <p>
+                                <strong>Author:</strong>
+                                <br />
+                                Beatrix Chan
+                                <a href="https://github.com/beatrix-chan" class="ms-2" target="_blank"
+                                    aria-label="GitHub Profile">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-github" viewBox="0 0 16 16">
+                                        <path
+                                            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+                                    </svg>
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- End of Author Section -->
+            </div>
         </header>
 
-        <div class="row g-4">
-            <div class="col-md-4">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Climate Modeling and Environmental Prediction</h5>
-                        <p class="card-text">One of the most important environmental applications of computing is
-                            climate modeling. Advanced computer systems analyze vast amounts of meteorological and
-                            environmental data to simulate climate patterns and predict extreme weather events such as
-                            hurricanes, floods, and droughts. These simulations help policymakers and environmental
-                            scientists develop strategies for disaster preparedness and climate adaptation. According to
-                            Meehl et al. (2020), supercomputing enables researchers to model global climate systems with
-                            increasing precision, improving the accuracy of long-term climate projections. This
-                            computational approach has been crucial in supporting international climate change
-                            initiatives and promoting sustainable policy development.</p>
+        <!-- Article Section -->
+        <div class="container">
+            <article>
+                <section class="mb-5">
+                    <h2>Climate Modeling and Environmental Prediction</h2>
+                    <p>One of the most important environmental applications of computing is climate modeling. Advanced
+                        computer systems analyze vast amounts of meteorological and environmental data to simulate
+                        climate patterns and predict extreme weather events such as hurricanes, floods, and droughts.
+                        These simulations help policymakers and environmental scientists develop strategies for disaster
+                        preparedness and climate adaptation.</p>
 
-                    </div>
-                </div>
-            </div>
+                    <p>According to Meehl et al. (2020), supercomputing enables researchers to model global climate
+                        systems with increasing precision, improving the accuracy of long-term climate projections. This
+                        computational approach has been crucial in supporting international climate change initiatives
+                        and promoting sustainable policy development.</p>
+                </section>
 
-            <div class="col-md-4">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Environmental Monitoring and Data Analytics</h5>
-                        <p class="card-text"> Computing also plays a vital role in environmental monitoring, where
-                            sensors and satellite technologies collect and analyze data on air quality, deforestation,
-                            ocean pollution, and biodiversity. Big data analytics and machine learning algorithms can
-                            process millions of environmental data points to detect patterns and predict ecological
-                            risks. For example, the use of Geographic Information Systems (GIS) allows researchers to
-                            visualize environmental changes in real time. Li et al. (2023) found that AI-driven
-                            environmental monitoring systems improved the detection of pollution sources by more than
-                            30%, helping governments take timely corrective action. This use of computing contributes to
-                            better environmental governance and sustainable ecosystem management.
+                <section class="mb-5">
+                    <h2>Environmental Monitoring and Data Analytics</h2>
+                    <p>Computing also plays a vital role in environmental monitoring, where sensors and satellite
+                        technologies collect and analyze data on air quality, deforestation, ocean pollution, and
+                        biodiversity. Big data analytics and machine learning algorithms can process millions of
+                        environmental data points to detect patterns and predict ecological risks. For example, the use
+                        of Geographic Information Systems (GIS) allows researchers to visualize environmental changes in
+                        real time.</p>
 
-                        </p>
-                    </div>
-                </div>
-            </div>
+                    <p>Li et al. (2023) found that AI-driven environmental monitoring systems improved the detection of
+                        pollution sources by more than 30%, helping governments take timely corrective action. This use
+                        of computing contributes to better environmental governance and sustainable ecosystem
+                        management.</p>
+                </section>
 
-            <div class="col-md-4">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Green Computing and Sustainable IT Infrastructure</h5>
-                        <p class="card-text">Green computing refers to the design and use of computers and IT systems in
-                            an environmentally responsible manner. It includes energy-efficient hardware, renewable
-                            power sources for data centers, and e-waste recycling. By adopting green computing
-                            practices, organizations can reduce carbon emissions and electronic waste while maintaining
-                            technological advancement. Kumar and Singh (2022) highlighted that optimizing data center
-                            cooling systems and implementing cloud-based solutions could reduce energy use by up to 40%.
-                            These innovations make computing itself more sustainable and align with global carbon
-                            reduction goals.</p>
-                    </div>
-                </div>
-            </div>
+                <section class="mb-5">
+                    <h2>Green Computing and Sustainable IT Infrastructure</h2>
+                    <p>Green computing refers to the design and use of computers and IT systems in an environmentally
+                        responsible manner. It includes energy-efficient hardware, renewable power sources for data
+                        centers, and e-waste recycling. By adopting green computing practices, organizations can reduce
+                        carbon emissions and electronic waste while maintaining technological advancement.</p>
+
+                    <p>Kumar and Singh (2022) highlighted that optimizing data center cooling systems and implementing
+                        cloud-based solutions could reduce energy use by up to 40%. These innovations make computing
+                        itself more sustainable and align with global carbon reduction goals.</p>
+                </section>
+            </article>
         </div>
+        <!-- End of Article Section -->
+
+        <!-- References Section -->
+        <section class="bg-light py-5">
+            <div class="container">
+                <h2 class="mb-4">References</h2>
+                <ol class="list-group list-group-numbered">
+                    <li class="list-group-item">Meehl, G. A., et al. (2020). Climate change projections in
+                        CESM1(CAM5) compared to CCSM4. Journal of Climate, 26(17), 6287-6308.</li>
+                    <li class="list-group-item">Li, J., et al. (2023). AI-driven environmental monitoring systems for
+                        real-time pollution detection. Environmental Science & Technology, 57(9), 3456-3467.</li>
+                    <li class="list-group-item">Kumar, R., & Singh, P. (2022). Energy efficiency in data centers:
+                        Optimizing cooling and cloud solutions. IEEE Transactions on Sustainable Computing, 7(2),
+                        210-225.</li>
+                </ol>
+            </div>
+        </section>
     </main>
 
-    <!-- References Section -->
-    <section class="bg-light py-5 mt-5">
-        <div class="container">
-            <h2 class="mb-4">References</h2>
-            <ol class="list-group list-group-numbered">
-                <li class="list-group-item">Meehl, G. A., et al. (2020). Climate change projections in CESM1(CAM5)
-                    compared to CCSM4. Journal of Climate, 26(17), 6287-6308.</li>
-                <li class="list-group-item">Li, J., et al. (2023). AI-driven environmental monitoring systems for
-                    real-time pollution detection. Environmental Science & Technology, 57(9), 3456-3467.</li>
-                <li class="list-group-item">Kumar, R., & Singh, P. (2022). Energy efficiency in data centers: Optimizing
-                    cooling and cloud solutions. IEEE Transactions on Sustainable Computing, 7(2), 210-225.</li>
-            </ol>
-        </div>
-    </section>
-
     <!-- Footer -->
-    <footer class="bg-light text-center py-3 mt-5">
-        <small class="text-muted">&copy; 2025 Environmen</small>
+    <footer class="bg-dark text-light py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <p>&copy; 2025 Cats. All rights reserved.</p>
+                </div>
+                <div class="col-md-4 text-md-center">
+                    <button type="button" class="btn btn-labeled btn-outline-light">
+                        <span class="btn-label"><i class="bi bi-github"></i></span>&nbsp;beatrix-chan/cats
+                    </button>
+                </div>
+                <div class="col-md-4 text-md-end">
+                    <p>Built with <a href="https://getbootstrap.com/">Bootstrap</a></p>
+                </div>
+            </div>
+        </div>
     </footer>
 
-    <!-- Bootstrap JS (bundle includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
