--- a/index.html
+++ b/index.html
@@ -1,27 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cats - Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <style>
-        html,
-        body {
-            height: 100%;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-        }
-
-        body>footer {
-            margin-top: auto;
-        }
-    </style>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Home | Cats</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -93,8 +80,8 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h3 class="card-title h5">Environment</h3>
-                            <p class="card-text">Discover how AI and technology help improve environmental monitoring, conservation,
-                                and sustainable practices.
+                            <p class="card-text">Discover how AI and technology help improve environmental monitoring,
+                                conservation, and sustainable practices.
                             </p>
                             <a href="environment.html" class="btn btn-outline-primary">Read More</a>
                         </div>
@@ -126,13 +113,18 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-dark text-light py-4 mt-5">
+    <footer class="bg-dark text-light py-4">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <p>&copy; 2025 Cats. All rights reserved.</p>
                 </div>
-                <div class="col-md-6 text-md-end">
+                <div class="col-md-4 text-md-center">
+                    <button type="button" class="btn btn-labeled btn-outline-light">
+                        <span class="btn-label"><i class="bi bi-github"></i></span>&nbsp;beatrix-chan/cats
+                    </button>
+                </div>
+                <div class="col-md-4 text-md-end">
                     <p>Built with <a href="https://getbootstrap.com/">Bootstrap</a></p>
                 </div>
             </div>
