--- a/retina-ai.html
+++ b/retina-ai.html
@@ -2,30 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <style>
-        html,
-        body {
-            height: 100%;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-        }
-
-        main {
-            flex: 1 0 auto;
-        }
-
-        footer {
-            flex-shrink: 0;
-        }
-    </style>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Google AI &mdash; Diabetic Retinopathy | Cats</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -56,12 +39,14 @@
         </div>
     </nav>
 
-    <main class="flex-grow-1">
+    <main>
         <header>
             <div class="container">
-                <h1 class="display-5 fw-bold mb-4">Google AI - Diabetic Retinopathy </h1>
-                <!-- About/Contact Section -->
-                <div class="container mb-4" id="aboutAndContactSection">
+                <h1 class="display-5 fw-bold mb-4">Google AI - Diabetic Retinopathy</h1>
+                <p class="lead">AI is revolutionizing healthcare and saving people's vision through early detection of
+                    diabetic retinopathy.</p>
+                <!-- Author Section -->
+                <div class="container mb-4" id="authorSection">
                     <div class="row">
                         <div class="col">
                             <p>
@@ -80,54 +65,52 @@
                         </div>
                     </div>
                 </div>
-                <!-- End of About/Contact Section -->
+                <!-- End of Author Section -->
             </div>
         </header>
 
-        <!-- Article Section-->
+        <!-- Article Section -->
         <div class="container">
             <h2>How AI is used to save people's visions</h2>
-            <br />
             <article>
                 <p>Providing healthcare and improving people's lives doesn't solely depend on the existence or
-                    advancement
-                    of treatment methods. Logistics—how we deliver well-established treatments to patients—is equally
-                    critical. Even when diseases are curable, late diagnosis can leave patients irreversibly affected.
-                </p>
+                    advancement of treatment methods. Logistics—how we deliver well-established treatments to
+                    patients—is equally critical. Even when diseases are curable, late diagnosis can leave patients
+                    irreversibly affected.</p>
 
                 <p>Diabetic retinopathy exemplifies this challenge. This condition can lead to permanent vision loss
-                    when
-                    left untreated, making early detection absolutely critical for preserving sight.</p>
+                    when left untreated, making early detection absolutely critical for preserving sight.</p>
 
                 <p>As a progressive disease with distinct stages, diabetic retinopathy requires careful triage. Doctors
-                    must
-                    prioritize patients with advanced stages, but in densely populated regions with few specialized
+                    must prioritize patients with advanced stages, but in densely populated regions with few specialized
                     ophthalmologists, scanning every patient becomes impossible. The tragic result is preventable vision
                     loss—not because effective treatments don't exist, but because they cannot be delivered in time.</p>
 
                 <p>Scientists at Google collaborated with clinicians to address this bottleneck by developing an
-                    AI-powered
-                    pre-diagnosis machine using image detection technology. The system can be operated by staff trained
-                    in a
-                    relatively short time, enabling healthcare workers to quickly identify and prioritize patients with
-                    progressed diabetic retinopathy.</p>
+                    AI-powered pre-diagnosis machine using image detection technology. The system can be operated by
+                    staff trained in a relatively short time, enabling healthcare workers to quickly identify and
+                    prioritize patients with progressed diabetic retinopathy.</p>
 
                 <p>AI isn't just improving diagnostic accuracy—it's enabling diagnosis to happen in time to make a
                     difference.</p>
             </article>
-
         </div>
-        <!-- End of Article Section-->
+        <!-- End of Article Section -->
     </main>
 
     <!-- Footer -->
-    <footer class="bg-dark text-light py-4 mt-5">
+    <footer class="bg-dark text-light py-4">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <p>&copy; 2025 Cats. All rights reserved.</p>
                 </div>
-                <div class="col-md-6 text-md-end">
+                <div class="col-md-4 text-md-center">
+                    <button type="button" class="btn btn-labeled btn-outline-light">
+                        <span class="btn-label"><i class="bi bi-github"></i></span>&nbsp;beatrix-chan/cats
+                    </button>
+                </div>
+                <div class="col-md-4 text-md-end">
                     <p>Built with <a href="https://getbootstrap.com/">Bootstrap</a></p>
                 </div>
             </div>
