Hyperlink to GitHub repo at footer

--- a/index.html
+++ b/index.html
@@ -120,9 +120,11 @@
                     <p>&copy; 2025 Cats. All rights reserved.</p>
                 </div>
                 <div class="col-md-4 text-md-center">
-                    <button type="button" class="btn btn-labeled btn-outline-light">
-                        <span class="btn-label"><i class="bi bi-github"></i></span>&nbsp;beatrix-chan/cats
-                    </button>
+                    <a href="https://github.com/beatrix-chan/cats" target="blank">
+                        <button type="button" class="btn btn-labeled btn-outline-light">
+                            <span class="btn-label"><i class="bi bi-github"></i></span>&nbsp;beatrix-chan/cats
+                        </button>
+                    </a>
                 </div>
                 <div class="col-md-4 text-md-end">
                     <p>Built with <a href="https://getbootstrap.com/">Bootstrap</a></p>
