--- a/index.html
+++ b/index.html
@@ -120,10 +120,8 @@
                     <p>&copy; 2025 Cats. All rights reserved.</p>
                 </div>
                 <div class="col-md-4 text-md-center">
-                    <a href="https://github.com/beatrix-chan/cats" target="blank">
-                        <button type="button" class="btn btn-labeled btn-outline-light">
-                            <span class="btn-label"><i class="bi bi-github"></i></span>&nbsp;beatrix-chan/cats
-                        </button>
+                    <a href="https://github.com/beatrix-chan/cats" target="_blank" class="btn btn-labeled btn-outline-light">
+                        <span class="btn-label"><i class="bi bi-github"></i></span>&nbsp;beatrix-chan/cats
                     </a>
                 </div>
                 <div class="col-md-4 text-md-end">
