Improve Semantic HTML and simplify redundant nested wrappers

--- a/index.html
+++ b/index.html
@@ -54,30 +54,30 @@
         <section id="articles" class="container my-5">
             <h2 class="mb-4">Featured Articles</h2>
             <div class="row g-4">
-                <article class="col-md-6 col-lg-4">
-                    <div class="card h-100">
+                <div class="col-md-6 col-lg-4">
+                    <article class="card h-100">
                         <div class="card-body">
                             <h3 class="card-title h5">Google AI - Diabetic Retinopathy</h3>
                             <p class="card-text">Discover how AI is revolutionizing healthcare and saving people's
                                 vision through early detection of diabetic retinopathy.</p>
                             <a href="retina-ai.html" class="btn btn-outline-primary">Read More</a>
                         </div>
-                    </div>
-                </article>
+                    </article>
+                </div>
 
-                <article class="col-md-6 col-lg-4">
-                    <div class="card h-100">
+                <div class="col-md-6 col-lg-4">
+                    <article class="card h-100">
                         <div class="card-body">
                             <h3 class="card-title h5">Healthcare - Computing for Good</h3>
                             <p class="card-text">Discover how AI and technology help improve diagosis, access, and
                                 assistive devices.</p>
                             <a href="healthcare.html" class="btn btn-outline-primary">Read More</a>
                         </div>
-                    </div>
-                </article>
+                    </article>
+                </div>
 
-                <article class="col-md-6 col-lg-4">
-                    <div class="card h-100">
+                <div class="col-md-6 col-lg-4">
+                    <article class="card h-100">
                         <div class="card-body">
                             <h3 class="card-title h5">Environment</h3>
                             <p class="card-text">Discover how AI and technology help improve environmental monitoring,
@@ -85,8 +85,8 @@
                             </p>
                             <a href="environment.html" class="btn btn-outline-primary">Read More</a>
                         </div>
-                    </div>
-                </article>
+                    </article>
+                </div>
             </div>
         </section>
 
@@ -120,7 +120,8 @@
                     <p>&copy; 2025 Cats. All rights reserved.</p>
                 </div>
                 <div class="col-md-4 text-md-center">
-                    <a href="https://github.com/beatrix-chan/cats" target="_blank" class="btn btn-labeled btn-outline-light">
+                    <a href="https://github.com/beatrix-chan/cats" target="_blank"
+                        class="btn btn-labeled btn-outline-light">
                         <span class="btn-label"><i class="bi bi-github"></i></span>&nbsp;beatrix-chan/cats
                     </a>
                 </div>
